--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/router": "~7.2.0",
     "@nguniversal/express-engine": "^7.1.1",
     "@nguniversal/module-map-ngfactory-loader": "0.0.0",
+    "angular-cli-ghpages": "^0.6.2",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
     "node-sass": "^4.14.1",
@@ -57,9 +58,9 @@
     "tslint": "~5.11.0",
     "typescript": "~3.2.2",
     "webpack-cli": "^3.1.0",
-     "tree-kill": ">=1.2.2",
-     "node-forge": ">=0.10.0",
-      "serialize-javascript": ">=3.1.0"
+    "tree-kill": ">=1.2.2",
+    "node-forge": ">=0.10.0",
+    "serialize-javascript": ">=3.1.0"
   },
   "engines": {
     "node": "11.15.0",
